# Hackathon-2

./: .gitignore  AGENTS.md  PHASE5_CHECKLIST.md  PHASE5_DEPLOYMENT.md  PROMPTS.md  README.md  UPDATE_VERCEL.md  check_status.ps1  debug_backend.ps1  deploy.ps1  fix_images.ps1  list_files.ps1  pyproject.toml  start_app.ps1  todo.db  update_frontend.ps1  update_phase5.ps1
.claude/: config.json
.spec-kit/: config.yaml
backend/: .dockerignore  Dockerfile  README.md  init_db.py  pyproject.toml  test_dapr_fallback.py  test_rag_manual.py  todo.db
backend/backend/: __init__.py  agent_tools.py  auth.py  database.py  main.py  models.py  rag.py
backend/backend/routes/: chat.py  tasks.py
frontend/: .dockerignore  Dockerfile  README.md  auth.db  auth.db-shm  auth.db-wal  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: TaskForm.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
helm/: README.md
helm/evolution-todo/: Chart.yaml  values.yaml
specs/: architecture.md  constitution.md  overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/deployment/: phase5-cloud.md
specs/features/: chatbot.md  rag-chatbot.md  task-crud.md
specs_history/: speckit.plan.md  speckit.specify.md  speckit.tasks.md
src/todo/: __init__.py  cli.py  models.py  store.py
(+171 files in other folders)
