[project]
name = "evolution-todo"
version = "0.1.0"
description = "Evolution of Todo — Phase I: In-memory Python console app (Hackathon II)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
